k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cor-tracker
  namespace: cor-tracker
spec:
  selector:
    app: cor-tracker
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
