k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cor-tracker
  namespace: cor-tracker
spec:
  ingressClassName: traefik
  rules:
    - host: cor.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cor-tracker
                port:
                  number: 80
